# USD-android

./: .gitmodules  README.md
examples/experiment/: CMakeLists.txt  main.cc
scripts/: bootstrap-osd-cmake.sh  bootstrap-usd-cmake.sh
scripts/x64/: bootstrap-osd-cmake.sh  bootstrap-tbb-cmake.sh  bootstrap-usd-cmake.sh
